--- a/views/verkauf_notebook_logged.ejs
+++ b/views/verkauf_notebook_logged.ejs
@@ -24,7 +24,9 @@
 	
 	
 	<!--Logout Buuton-->
-	<a href="/logout" class="logout">Logout</a>
+
+			
+	<a href="/logout" class="logout">Log---out</a>
 	
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
@@ -35,38 +37,35 @@
 		<div class="pcbutton">
 		<button id="myBtn1" class="dropbtn1">PC/Laptop</button>
 		  <div id="myDropdown1" class="pcbutton-content1">
-			<a href="verkauf_notebook.html">Notebook</a>
-			<a href="#Tastatur">PC</a>
-			<a href="#Monitor">Monitor</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_notebook">Notebook</a>
+			<a href="verkauf_pc">PC</a>
+
 		  </div>
 		</div>
 		
 		<div class="monitorbutton">
 		<button id="myBtn2" class="dropbtn2">Monitor</button>
 		  <div id="myDropdown2" class="monitorbutton-content2">
-			<a href="#4k">4k</a>
-			<a href="#FullHd">Full-HD</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_4k.html">4k</a>
+			<a href="verkauf_fullhd.html">Full-HD</a>
 		  </div>
 		</div>
 		
 		<div class="zubehoerbutton">
 		<button id="myBtn3" class="dropbtn3">Zubehoer</button>
 		  <div id="myDropdown3" class="zubehoerbutton-content3">
-			<a href="#shit">Shit</a>
-			<a href="#lit">Lit</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_maus.html">Maus</a>
+			<a href="verkauf_tastatur.html">Tastatur</a>
+			<a href="verkauf_kabel.html">Kabel</a>
 		  </div>
 		</div>
 		
 		<div class="konsolenbutton">
 		<button id="myBtn4" class="dropbtn4">Konsolen</button>
 		  <div id="myDropdown4" class="konsolenbutton-content4">
-			<a href="#ps4">PS4</a>
-			<a href="#XBOX">XBOX One</a>
-			<a href="#Nintendo">Nintendo Switch</a>
-			<a href="#Etc">etc</a>
+			<a href="verkauf_ps.html">PlayStation</a>
+			<a href="verkauf_xbox.html">XBOX</a>
+			<a href="verkauf_nintendo.html">Nintendo</a>
 		  </div>
 		</div>
 
@@ -146,7 +145,7 @@
 	
 	<!--Registrierungsbutton-->
 	<p class="GBAY-Reg">Immer noch kein GBAY-Konto?</p>
-	<h9>Immer noch kein GBAY-Konto?</h9>
+	
 	<a href="/registrieren.html" class="reg_button">Kostenlos Anmelden</a>
 	
 			
@@ -157,10 +156,12 @@
 	<!-----Gallerie---------------------------------------------->
 	
 	<!--Erstes Produkt------->
-	<img src="images/LG 14Z960 UltraSlim Notebook.jpg" id="ultslimpic" width="200" height="200">
+
+	<img src="images/LG 14Z960 UltraSlim Notebook.jpg" id="ultslimpic" width="300" height="250">
 	
-	<h7>
-		 <%= products[2].name %>
+	<h7>LG 14Z960 Ultraslim Notebook, 14 Zoll (35 cm) Full-HD, 
+		Intel Core i5-6200U, <br>4 GB RAM, 256 GB SSD, Windows 10,
+		Schwarz
 	</h7>
 	
 	
@@ -174,24 +175,49 @@
 			<td>DS B1</td>			
 		</tr>
 		<tr>
-			<th>Artikelgewicht</th>
-			<td>181 g</td>			
+			<th>Bildschirmdiagonale (Zoll)</th>
+			<td>14 Zoll</td>			
 		</tr>
 		<tr>
-			<th>Produktabmessungen</th>
-			<td>20,5 x 15,5 x 8,5 cm</td>			
-		</tr>		
+			<th>Betriebssystem</th>
+			<td>Windows 10 Home</td>			
+		</tr>	
+		<tr>
+			<th>Prozessor</th>
+			<td>Intel Core i5 6200U (2.8 GHz) LGA 1356 (Socket B2) </td>			
+		</tr>
+		<tr>
+			<th>Arbeitsspeicher-Größe</th>
+			<td>4096 MB</td>
+		<tr>
+			<th>Festplattenkapazität</th>
+			<td>256 GB</td>			
+		</tr>
+		<tr>
+			<th>Festplatten-Technologie</th>
+			<td>SSD</td>			
+		</tr>
+		</tr>
+		
 	</table>
 	
-	<h8>Preis: <%= products[2].price %></h8>
-
-	<a href="" class="warenkorb" id="ultslimnotebook"> In den Warenkorb</a>
+	<h8>825,-</h8>
+	<div id="trennlinie1">&nbsp;</div>
+	<div id="trennlinie2">&nbsp;</div>
+	<div id="trennlinie3">&nbsp;</div>
 	
+	
+	
+	<a href="" class="warenkorb" id="ultslimnotebook"> In den Warenkorb</a>
+	<!--Kiebell Laptop------------------------>
 	<!--zweites Produkt------->
-	<img src="images/Kiebel Gaming Laptop Ultra 7.0 [181167].jpg" id="kiebellaptop" width="200" height="200">
+	<img src="images/Kiebel Gaming Laptop Ultra 7.0 [181167].jpg" id="kiebellaptop" width="300" height="250">
 	
 	<h10>
-		 <%= products[3].name %>
+		Kiebel Gaming-Laptop Ultra 7.0 [181167] -
+		Intel Core i7-7700 4x 3.6GHz |<br> 43.9cm (17.3") FullHD LED-Display G-SYNC |
+		16GB DDR4 | 256GB M.2 + 1TB HDD |<br> NVIDIA Geforce GTX 1070 8GB | USB3.1 |
+		Sound Blaster X-Fi | 433Mbit WLAN + Bluetooth
 	</h10>
 	
 	
@@ -205,26 +231,41 @@
 			<td>181167</td>			
 		</tr>
 		<tr>
-			<th>Artikelgewicht</th>
-			<td>3,9 Kg</td>			
+			<th>Bildschirmdiagonale (Zoll)</th>
+			<td>17.3 Zoll</td>			
 		</tr>
 		<tr>
-			<th>Grafikkarte</th>
+			<th>Betriebssystem</th>
+			<td>Windows 10 Home</td>			
+		</tr>	
+		<tr>
+			<th>Prozessor</th>
+			<td>Intel Core i7-7700 4x 3.6GHz</td>			
+		</tr>
+		<tr>
+			<th>Arbeitsspeicher-Größe</th>
+			<td>16 GB</td>
+		<tr>
+			<th>Festplattenkapazität</th>
+			<td>256 GB, 1000 GB</td>			
+		</tr>
+		<tr>
+			<th>Beschreibung Grafikkarte</th>
 			<td>nVidia Geforce GTX 1070 8GB GDDR5</td>			
+		</tr>
 		</tr>		
 	</table>
 	
-	<h11>Preis: <%= products[3].price %></h11>
+	<h11>2.499.-</h11>
 
 	<a href="" class="warenkorb" id="kiebelwarenkorb"> In den Warenkorb</a>
 	
+	<div id="trennlinie4">&nbsp;</div>
+	<div id="trennlinie5">&nbsp;</div>
+	<div id="trennlinie6">&nbsp;</div>
 	
-		<br>
-	<br>
-	<br>
-	<br><br>
 	
-	<p1>Willkommen, <%= username %></p1>   
+	<h16>Willkommen, <%= username %></h16>   
 	
 	
 	
